# gebaar-libinput

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  PKGBUILD  README.md  build.Dockerfile  gebaar-libinput.desktop  main.cpp
assets/: PKGBUILD  PKGBUILD.git  gebaard.service
src/: daemonizer.cpp  daemonizer.h  main.cpp  util.cpp  util.h
src/config/: config.cpp  config.h
src/io/: input.cpp  input.h  input.hpp
